test/assets/error/data_after_code.hera
SET(R1, 42)

DLABEL(X)
INTEGER(42)
